#00001: Updated about me, added picture and random latin text.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>Brief information about you.</p>
+            <img src="images/1552500885080.jpg" alt="Your Name" class="profile-picture">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras venenatis euismod malesuada. 
+                Mauris efficitur purus sit amet dolor aliquet, nec aliquet odio aliquam. Duis pharetra massa ut nisi hendrerit, eget aliquet elit iaculis. 
+                Integer dictum urna at urna sagittis, nec varius erat viverra. Quisque ac turpis at dui ullamcorper vulputate. Nulla facilisi. 
+                Proin non felis at libero egestas consectetur. Aliquam erat volutpat. Suspendisse potenti. Nulla facilisi.</p>
         </section>
         <section id="skills">
             <h2>Skills</h2>
