#00002: Updated Contact. Added links to youtube, linkedin etc.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Junior James Achumu - Portfolio</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+
+
     <header>
         <h1>Your Name</h1>
         <nav>
@@ -18,7 +20,11 @@
             </ul>
         </nav>
     </header>
+
+
     <main>
+
+
         <section id="about">
             <h2>About Me</h2>
             <img src="images/1552500885080.jpg" alt="Your Name" class="profile-picture">
@@ -27,22 +33,37 @@
                 Integer dictum urna at urna sagittis, nec varius erat viverra. Quisque ac turpis at dui ullamcorper vulputate. Nulla facilisi. 
                 Proin non felis at libero egestas consectetur. Aliquam erat volutpat. Suspendisse potenti. Nulla facilisi.</p>
         </section>
+
+
         <section id="skills">
             <h2>Skills</h2>
             <p>Details about your engineering and design skills.</p>
         </section>
+
+
         <section id="projects">
             <h2>Projects</h2>
             <p>Descriptions and links to your projects.</p>
         </section>
+
+
         <section id="contact">
             <h2>Contact</h2>
-            <p>How to get in touch with you.</p>
+            <!-- How to get in touch with me -->
+            <li><a href="https://www.linkedin.com/in/james-junior-achumu-a242b8152" target="_blank">LinkedIn</a></li>
+                <li><a href="https://www.youtube.com/@latecad1530" target="_blank">YouTube</a></li>
+                <li><a href="https://github.com/mnjja" target="_blank">GitHub</a></li>
+                <li><a href="https://twitter.com/your-twitter" target="_blank">Twitter</a></li>
+                <!-- Add more social links as needed -->
         </section>
     </main>
+
+
     <footer>
         <p>&copy; 2024 Your Name</p>
     </footer>
+
+
     <script src="scripts/main.js"></script>
 </body>
 </html>
