#00003: Trying to add a home page. Seems picture in about me has changed

--- a/index.html
+++ b/index.html
@@ -10,20 +10,26 @@
 
 
     <header>
-        <h1>Your Name</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
+        <nav class="navbar">
+            <div class="navbar-container">
+                <a href="#" class="brand">Your Name</a>
+                <ul class="nav-links">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
 
 
     <main>
 
+        <section id="home">
+            <h2>Home</h2>
+            <!-- Blank home page content -->
+        </section>       
 
         <section id="about">
             <h2>About Me</h2>
