--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
         <section id="home">
             <h2>Home</h2>
+
+            <p> AKIN REFUSED TO BUILD ME A WEBSITE </p>
             <!-- Blank home page content -->
         </section>       
 
